Fix resume links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         github: <a class='light-purple hover-mid-gray' href='https://github.com/chrisregner'>github.com/chrisregner</a>
       </div>
       <div class=' lh-title'>
-        resume: <a class='light-purple hover-mid-gray' href='chrisregner.com/christopher-regner-resume.html'>web</a>, <a class='light-purple hover-mid-gray' href='chrisregner.com/christopher-regner-resume.pdf'>.pdf</a> or <a class='light-purple hover-mid-gray' href='chrisregner.com/christopher-regner-resume.docx'>.docx version</a>
+        resume: <a class='light-purple hover-mid-gray' href='/christopher-regner-resume.html'>web</a>, <a class='light-purple hover-mid-gray' href='/christopher-regner-resume.pdf'>.pdf</a> or <a class='light-purple hover-mid-gray' href='/christopher-regner-resume.docx'>.docx version</a>
       </div>
     </article>
 
