Add favicon; fix twitter card

--- a/index.html
+++ b/index.html
@@ -7,12 +7,32 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' href='https://unpkg.com/tachyons@4.9.1/css/tachyons.min.css'/>
 
+
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <meta name="description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development. His main expertise is React.js, Redux, and ECMAScript and he also has an intermediate level of skill in functional programming and test-driven development.">
 
   <meta property="og:title" content="Christopher Regner - Front-end Developer">
   <meta property="og:description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development.">
   <meta property="og:url" content="https://chrisregner.com">
 
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Christopher Regner - Front-end Developer ">
   <meta name="twitter:description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development.">
 
@@ -31,7 +51,7 @@
   </style>
 </head>
 <body>
-  <div class='wrapper mw7 ph4 ph0-l center mt4 mt5-l mb5 pb4 f4 lh-copy'>
+  <div class='wrapper mw7 ph3 ph4-m ph0-l center mt4 mt5-l mb5 pb4 f4 lh-copy'>
     <article>
       <p class='mb4'>
         <strong>Christopher Regner</strong> is a web developer with <strong>3 years</strong> of relevant experience who is transitioning to <strong>front-end javascript development</strong>. His main expertise is <a class='light-purple hover-mid-gray' href='https://reactjs.org/'><strong>React.js</strong></a>, <a class='light-purple hover-mid-gray' href='https://redux.js.org/'><strong>Redux</strong></a>, and <strong>ECMAScript</strong> and he also has an intermediate level of skill in <strong>functional programming</strong> and <strong>test-driven development</strong>.
@@ -61,7 +81,7 @@
       <h1 class='f3 pb3 mb4'>Sample Works:</h1>
 
       <ul class='list pa0'>
-        <li class='mb5'>
+        <li class='mb5 pb3-ns'>
           <div class='ba b--light-gray mb3'>
             <img class='db' src='./minimal-react-wordpress.png' alt=''>
           </div>
@@ -74,7 +94,7 @@
           </div>
         </li>
 
-        <li class='mb5'>
+        <li class='mb5 pb3-ns'>
           <div class='ba b--light-gray mb3'>
             <img class='db' src='./plans-and-journals.png' alt=''>
           </div>
