--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <meta name="description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development. His main expertise is React.js, Redux, and ECMAScript and he also has an intermediate level of skill in functional programming and test-driven development.">
 
 
-  <meta property="og:url" content="https://chrisregner.com">
+  <meta property="og:url" content="https://chrisregner.com" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Christopher Regner - Front-end Developer">
-  <meta property="og:description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development.">
-  <meta property="og:image" content="" />
+  <meta property="og:title" content="Christopher Regner - Front-end Developer" />
+  <meta property="og:description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development." />
+  <meta property="og:image" />
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Christopher Regner - Front-end Developer ">
