Revert from chrisregner.com to chrisregner.github.io

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development. His main expertise is React.js, Redux, and ECMAScript and he also has an intermediate level of skill in functional programming and test-driven development.">
 
 
-  <meta property="og:url" content="https://chrisregner.com" />
+  <meta property="og:url" content="https://chrisregner.com/" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Christopher Regner - Front-end Developer" />
   <meta property="og:description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development." />
