Update resume; change theme from purple to pink; add facebook og img

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Christopher Regner - Front-end Developer" />
   <meta property="og:description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development." />
-  <meta property="og:image" />
+  <meta property="og:image" content="https://chrisregner.com/favicon-256x256.png" />
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Christopher Regner - Front-end Developer ">
@@ -57,7 +57,7 @@
   <div class='wrapper mw7 ph3 ph4-m ph0-l center mt4 mt5-l mb5 pb4 f4 lh-copy'>
     <article>
       <p class='mb4'>
-        <strong>Christopher Regner</strong> is a web developer with <strong>3 years</strong> of relevant experience who is transitioning to <strong>front-end javascript development</strong>. His main expertise is <a class='light-purple hover-mid-gray' href='https://reactjs.org/'><strong>React.js</strong></a>, <a class='light-purple hover-mid-gray' href='https://redux.js.org/'><strong>Redux</strong></a>, and <strong>ECMAScript</strong> and he also has an intermediate level of skill in <strong>functional programming</strong> and <strong>test-driven development</strong>.
+        <strong>Christopher Regner</strong> is a web developer with <strong>3 years</strong> of relevant experience who is transitioning to <strong>front-end javascript development</strong>. His main expertise is <a class='hot-pink hover-mid-gray' href='https://reactjs.org/'><strong>React.js</strong></a>, <a class='hot-pink hover-mid-gray' href='https://redux.js.org/'><strong>Redux</strong></a>, and <strong>ECMAScript</strong> and he also has an intermediate level of skill in <strong>functional programming</strong> and <strong>test-driven development</strong>.
       </p>
 
       <p class='mb4'>
@@ -65,16 +65,16 @@
       </p>
 
       <div class='mb3 mb2-ns lh-title'>
-        email: <a class='light-purple hover-mid-gray' href='mailto:dev@chrisregner.com'>dev@chrisregner.com</a>
+        email: <a class='hot-pink hover-mid-gray' href='mailto:dev@chrisregner.com'>dev@chrisregner.com</a>
       </div>
       <div class='mb3 mb2-ns lh-title'>
         cell #: (+63) 948 844 2777
       </div>
       <div class='mb3 mb2-ns lh-title'>
-        github: <a class='light-purple hover-mid-gray' href='https://github.com/chrisregner'>github.com/chrisregner</a>
+        github: <a class='hot-pink hover-mid-gray' href='https://github.com/chrisregner'>github.com/chrisregner</a>
       </div>
       <div class=' lh-title'>
-        resume: <a class='light-purple hover-mid-gray' href='/christopher-regner-resume.html'>web</a>, <a class='light-purple hover-mid-gray' href='/christopher-regner-resume.pdf'>.pdf</a> or <a class='light-purple hover-mid-gray' href='/christopher-regner-resume.docx'>.docx version</a>
+        resume: <a class='hot-pink hover-mid-gray' href='/christopher-regner-resume.html'>web</a>, <a class='hot-pink hover-mid-gray' href='/christopher-regner-resume.pdf'>.pdf</a> or <a class='hot-pink hover-mid-gray' href='/christopher-regner-resume.docx'>.docx version</a>
       </div>
     </article>
 
@@ -89,7 +89,7 @@
             <img class='db' src='./minimal-react-wordpress.png' alt=''>
           </div>
           <div class="pt2">
-            <a href='https://chrisregner.github.io/minimal-react-wordpress' class='light-purple hover-mid-gray'><strong>Minimal React WordPress</strong></a> <br />
+            <a href='https://chrisregner.github.io/minimal-react-wordpress' class='hot-pink hover-mid-gray'><strong>Minimal React WordPress</strong></a> <br />
             <div class='mb3 mid-gray f5 ttl'>Personal, React.js, Redux, WordPress</div>
             <p class='f5'>
               A React/Redux website that gets its data from WordPress through its REST API - the means by which developers can create Single Page Applications (SPA) with WordPress. Just like most CMS, it retrieves posts by list or individually. It also allows you to filter posts by keyword or tags. <a href='https://github.com/chrisregner/minimal-react-wordpress'>View source here.</a>
@@ -102,7 +102,7 @@
             <img class='db' src='./plans-and-journals.png' alt=''>
           </div>
           <div class="pt2">
-            <a href='https://chrisregner.github.io/plans-and-journals' class='light-purple hover-mid-gray'><strong>Plans And Journals</strong></a> <br />
+            <a href='https://chrisregner.github.io/plans-and-journals' class='hot-pink hover-mid-gray'><strong>Plans And Journals</strong></a> <br />
             <div class='mb3 mid-gray f5 ttl'>Personal, React.js, Redux, Map</div>
             <p class='f5'>
               A web app that functions like a travel journal that allows users to make entries about the places they have been, while also doubling as planner where they can also create plans and schedules. These two features are also visualized with a map (Google Map). <a href='https://github.com/chrisregner/plans-and-journals'>View source here.</a>
@@ -115,10 +115,10 @@
             <img class='db' src='./daily-routines-tracker.png' alt=''>
           </div>
           <div class="pt2">
-            <a href='https://chrisregner.github.io/daily-routines-tracker' class='light-purple hover-mid-gray'><strong>Daily Routines Tracker</strong></a> <br />
+            <a href='https://chrisregner.github.io/daily-routines-tracker' class='hot-pink hover-mid-gray'><strong>Daily Routines Tracker</strong></a> <br />
             <div class='mb3 mid-gray f5 ttl'>Personal, React.js, Redux</div>
             <p class='f5'>
-              A simple web app where users can manage a list of routines/tasks and track the time being spent on each until the set goal is reached. <a href='https://github.com/chrisregner/daily-routines-tracker' class='light-purple hover-mid-gray'>View source here.</a>
+              A simple web app where users can manage a list of routines/tasks and track the time being spent on each until the set goal is reached. <a href='https://github.com/chrisregner/daily-routines-tracker' class='hot-pink hover-mid-gray'>View source here.</a>
             </p>
           </div>
         </li>
