Change facebook og image format from .png to .jpg

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Christopher Regner - Front-end Developer" />
   <meta property="og:description" content="Christopher Regner is a web developer with 3 years of relevant experience who is transitioning to front-end javascript development." />
-  <meta property="og:image" content="https://chrisregner.com/favicon-256x256.png" />
+  <meta property="og:image" content="https://chrisregner.com/favicon-256x256.jpg" />
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Christopher Regner - Front-end Developer ">
