Fix unstyled link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a href='https://chrisregner.github.io/minimal-react-wordpress' class='hot-pink hover-mid-gray'><strong>Minimal React WordPress</strong></a> <br />
             <div class='mb3 mid-gray f5 ttl'>Personal, React.js, Redux, WordPress</div>
             <p class='f5'>
-              A React/Redux website that gets its data from WordPress through its REST API - the means by which developers can create Single Page Applications (SPA) with WordPress. Just like most CMS, it retrieves posts by list or individually. It also allows you to filter posts by keyword or tags. <a href='https://github.com/chrisregner/minimal-react-wordpress'>View source here.</a>
+              A React/Redux website that gets its data from WordPress through its REST API - the means by which developers can create Single Page Applications (SPA) with WordPress. Just like most CMS, it retrieves posts by list or individually. It also allows you to filter posts by keyword or tags. <a href='https://github.com/chrisregner/minimal-react-wordpress' class='hot-pink hover-mid-gray'>View source here.</a>
             </p>
           </div>
         </li>
@@ -105,7 +105,7 @@
             <a href='https://chrisregner.github.io/plans-and-journals' class='hot-pink hover-mid-gray'><strong>Plans And Journals</strong></a> <br />
             <div class='mb3 mid-gray f5 ttl'>Personal, React.js, Redux, Map</div>
             <p class='f5'>
-              A web app that functions like a travel journal that allows users to make entries about the places they have been, while also doubling as planner where they can also create plans and schedules. These two features are also visualized with a map (Google Map). <a href='https://github.com/chrisregner/plans-and-journals'>View source here.</a>
+              A web app that functions like a travel journal that allows users to make entries about the places they have been, while also doubling as planner where they can also create plans and schedules. These two features are also visualized with a map (Google Map). <a href='https://github.com/chrisregner/plans-and-journals' class='hot-pink hover-mid-gray'>View source here.</a>
             </p>
           </div>
         </li>
