Edit link style; move manifest.json; add pdf resume;

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     .font-primary { font-family: "Open Sans", sans-serif; font-weight: 400; }
     .lh-copy { line-height: 1.8em; }
     .b { font-weight: 600; }
+    .light-purple { color:#6741d9; }
 
     /* specific styles */
     @media screen and (min-width: 38em) {
@@ -121,7 +122,7 @@
 
     <p class="mb4 tj">
       <strong>Christopher Regner</strong> is a self-taught front-end developer
-        whose current expertise is React.js, Redux, and JavaScript. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray">(Node.js, Meteor.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black purple">StraightArrow Corp</a> <span class="f6 mid-gray">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire more skills such as back-end programming, machine learning, and cryptocurrency.
+        whose current expertise is React.js, Redux, and JavaScript. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray">(Node.js, Meteor.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire more skills such as back-end programming, machine learning, and cryptocurrency.
     </p>
 
     <p class="tj">
