Revise a sample work's description;

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <h3 class="mb2 black f3 lh-title b">Plans and Journals</h3>
           <div class="mb2 mid-gray f6 lh-title ttu tracked">Personal, React.js, Redux, TDD, Map</div>
           <p class="f6 mb4 lh-copy">
-            A web app that functions like a travel journal that allows users to make entries about the places they have been, while also doubling as planner where they can also create plans and schedules. These two features are also visualized with a map (Google Map).
+            A web app that functions like a travel journal that allows users to make entries about the places they have been, while also doubling as planner where they can create plans and schedules. These two main features are also visualized with a map (using Google Map).
           </p>
           <div class="flex">
             <a class="ba bw1 pv1 ph2 f5 lh-solid no-underline tracked ttu animated b--black bg-white hover-bg-black black hover-white mr2 mr3-ns" href="https://github.com/chrisregner/plans-and-journals" target="_blank">Source</a>
