Adjust distance between work section title and its first item

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <!-- Works -->
   <article class="center mh4 mb5 mw7">
-    <h2 class="f4 mb5 normal ttu tracked tc">Sample Works</h2>
+    <h2 class="f4 mb4 pb3 normal ttu tracked tc">Sample Works</h2>
 
     <ul class="list pa0">
       <li class="mb5 pb3">
