Tweak footer styles

--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
     <a href="#top" class="dib mb4 pb3 ba bw1 pv1 ph2 w-100 w-auto-ns f5 lh-solid no-underline ttu animated tc tracked b--black bg-black hover-bg-white white hover-black">
       Go Back To Top
     </a>
-    <section class="mid-gray f7 tc ttl">
-      Designed and developed by Christopher Regner • Built with <a href="http://tachyons.io" class="mid-gray">Tachyons</a>
+    <section class="mid-gray f7 tc ttl lh-copy">
+      Designed and developed by Christopher Regner. Built&nbsp;with&nbsp;<a href="http://tachyons.io" class="mid-gray">Tachyons</a>.
     </section>
   </footer>
 
