Adjust resume button

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="pv1 pr1 _ph2-l w-50 _w-auto-l">
       <a href="resume/christopher-regner-resume.doc" class="db ba bw1 pv1 ph2 w-100 w-auto-l f5 lh-solid no-underline ttu animated tc tracked b--black bg-black hover-bg-white white hover-black" target="_blank">
-        <span class="tracked">Resume</span> <span class="f7 silver ttl tracked-tight">.doc</span>
+        <span class="tracked" style='margin-right:.125em;'>Resume</span><span class="f7 silver ttl tracked-tight">.doc</span>
       </a>
     </div>
     <div class="pv1 pl1 _ph2-l w-50 _w-auto-l">
@@ -292,6 +292,7 @@
     </ul>
   </article>
 
+  <!-- Footer -->
   <footer class="tr">
     <a href="#top" class="dib mb4 pb3 ba bw1 pv1 ph2 w-100 w-auto-ns f5 lh-solid no-underline ttu animated tc tracked b--black bg-black hover-bg-white white hover-black">
       Go Back To Top
