Update content; tweak design

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <h2 class="f4 mb4 normal ttu tracked tc">Introduction</h2>
 
     <!-- Infos -->
-    <div class="mb4 flex flex-wrap items-center justify-center tc lh-solid f6 mid-gray">
+    <div class="mb4 flex flex-wrap items-center justify-center tc lh-solid f6 mid-gray ttl">
       <div class="flex items-center justify-center mv2 mh2">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#777777" d="M12 12.713l-11.985-9.713h23.97l-11.985 9.713zm0 2.574l-12-9.725v15.438h24v-15.438l-12 9.725z"/></svg>
         <div class="ml2">
@@ -115,18 +115,17 @@
       <div class="flex items-center justify-center mv2 mh2">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#777777" d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
         <div class="ml2">
-          Davao&nbsp;City,&nbsp;Philippines
+          Muntinlupa City,&nbsp;Philippines
         </div>
       </div>
     </div>
 
     <p class="mb4 tj">
-      <strong>Christopher Regner</strong> is a self-taught front-end developer
-        whose current expertise is React.js, Redux, and JavaScript. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray">(Node.js, Meteor.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire more skills such as back-end programming, machine learning, and cryptocurrency.
+      <strong>Christopher Regner</strong> is a self-taught front-end developer whose current expertise is React.js, Redux, and JavaScript. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray ttl">(Node.js, Meteor.js, Angular.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray ttl">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire more skills such as back-end programming, machine learning, and cryptocurrency.
     </p>
 
     <p class="tj">
-      He is currently unemployed and is searching for a junior to mid-level job focusing on front-end javascript development, and welcomes both relocation and remote opportunities, permanent or contractual.
+      He is currently a front-end developer at <a href="https://www.webdrone.fr" target="_blank" class="hover-black light-purple no-underline">Webdrone</a> <span class="f6 mid-gray ttl">(vanilla JavaScript/ECMAScript heavy)</span> but is open for opportunities, preferrably part-time and React.js/Node.js focused projects.
     </p>
   </article>
 
@@ -162,13 +161,13 @@
         <section class="pa3">
           <h3 class="mb1 f6 ttl mid-gray normal">advanced</h3>
           <div class="indent-next-line">
-            React.js &amp; Redux <span class="f7 mid-gray">(Redux-Saga, Redux-Actions, Redux-Thunk)</span>
+            React.js &amp; Redux <span class="f7 mid-gray">(Redux-Saga, Redux-Actions, Redux-Thunk, styled-jsx, styled-components)</span>
           </div>
           <div class="intent-next-line">
-            HTML &amp; CSS <span class="f7 mid-gray">(Bootstrap, Tachyons, Functional CSS)</span>
+            HTML &amp; CSS <span class="f7 mid-gray">(Bootstrap, Tachyons)</span>
           </div>
           <div class="indent-next-line">
-            JavaScript <span class="f7 mid-gray">(ECMAScript, DOM, async requests, JQuery)</span>
+            JavaScript <span class="f7 mid-gray">(ECMAScript, DOM, async programming, JQuery)</span>
           </div>
         </section>
 
@@ -207,7 +206,7 @@
             CSS Precompiler <span class="f7 mid-gray">(SASS, LESS)</span>
           </div>
           <div class="indent-next-line">
-            CSS Methodologies <span class="f7 mid-gray">(SMACSS, BEM)</span>
+            CSS Methodologies <span class="f7 mid-gray">(SMACSS, BEM, Functional CSS)</span>
           </div>
         </section>
 
@@ -217,6 +216,7 @@
             Data Visualization <span class="f7 mid-gray">(d3.js, SVG)</span>
           </div>
           Adobe Photoshop <br />
+          GraphQL/Apollo <br />
           Web Design <br />
           SEO best practices
         </section>
@@ -244,8 +244,8 @@
           <img class="db" src="img/minimal-react-wordpress.png" alt="">
         </div>
         <div>
-          <h3 class="mb2 black f3 lh-title b">Minimal React WordPress</h3>
-          <div class="mb2 mid-gray f6 lh-title ttu tracked">Personal, React.js, Redux, TDD, WordPress</div>
+          <h3 class="mb2 black f3 lh-title normal">Minimal React WordPress</h3>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, Redux, TDD, WordPress</div>
           <p class="f6 mb4 lh-copy">
             A React/Redux website that gets its data from WordPress through its REST API - the means by which developers can create Single Page Applications (SPA) with WordPress. Just like most CMS, it retrieves posts by list or individually. It also allows you to filter posts by keyword or tags.
           </p>
@@ -261,8 +261,8 @@
           <img class="db" src="img/plans-and-journals.png" alt="">
         </div>
         <div>
-          <h3 class="mb2 black f3 lh-title b">Plans and Journals</h3>
-          <div class="mb2 mid-gray f6 lh-title ttu tracked">Personal, React.js, Redux, TDD, Map</div>
+          <h3 class="mb2 black f3 lh-title normal">Plans and Journals</h3>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, Redux, TDD, Map</div>
           <p class="f6 mb4 lh-copy">
             A web app that functions like a travel journal that allows users to make entries about the places they have been, while also doubling as planner where they can create plans and schedules. These two main features are also visualized with a map (using Google Map).
           </p>
@@ -278,8 +278,8 @@
           <img class="db" src="img/daily-routines-tracker.png" alt="">
         </div>
         <div>
-          <h3 class="mb2 black f3 lh-title b">Daily Routines Tracker</h3>
-          <div class="mb2 mid-gray f6 lh-title ttu tracked">Personal, React.js, Redux</div>
+          <h3 class="mb2 black f3 lh-title normal">Daily Routines Tracker</h3>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, Redux</div>
           <p class="f6 mb4 lh-copy">
             A simple web app where users can manage a list of routines/tasks and track the time being spent on each until the set goal is reached.
           </p>
