--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
 
     <p class="mb4 tj">
-      <strong>Christopher Regner</strong> is a self-taught front-end developer whose current expertise is React.js, Redux, and JavaScript. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray ttl">(Node.js, Meteor.js, Angular.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray ttl">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire more skills such as back-end programming, machine learning, and cryptocurrency.
+      <strong>Christopher Regner</strong> is a self-taught front-end developer whose current expertise is React.js, Redux, and JavaScript. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray ttl">(Node.js, Meteor.js, Angular.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray ttl">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire/improve more skills such as node.js, machine learning, and cryptocurrency.
     </p>
 
     <p class="tj">
