--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="flex items-center justify-center mv2 mh2">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#777777" d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
         <div class="ml2">
-          Muntinlupa City,&nbsp;Philippines
+          Rizal,&nbsp;Philippines
         </div>
       </div>
     </div>
@@ -125,7 +125,7 @@
     </p>
 
     <p class="tj">
-      He is currently a front-end developer at <a href="https://www.webdrone.fr" target="_blank" class="hover-black light-purple no-underline">Webdrone</a> <span class="f6 mid-gray ttl">(vanilla JavaScript/ECMAScript heavy)</span> but is open for opportunities, preferrably part-time and React.js/Node.js focused projects.
+      He is looking for positions focused on <strong>React.js</strong> and <strong>JavaScript</strong> <span class="f6 mid-gray ttl">(permanent or contractual, office-based (Metro Manila) or remote)</span>. He is currently more adept at front-end development, but he is also open to revisiting is back-end skills.
     </p>
   </article>
 
@@ -239,6 +239,23 @@
     <h2 class="f4 mb4 pb3 normal ttu tracked tc">Sample Works</h2>
 
     <ul class="list pa0">
+      <li class="mb5 pb3">
+        <div class="ba b--light-gray mb4">
+          <img class="db" src="img/github-compare.png" alt="">
+        </div>
+        <div>
+          <h3 class="mb2 black f3 lh-title normal">Github Compare</h3>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, D3.js, Data-Visualization, SVG, GraphQL</div>
+          <p class="f6 mb4 lh-copy">
+            App where you can search github repositories and compare their stats, such as stars and issues count, with charts (Bar, Pie, Line chart).
+          </p>
+          <div class="flex">
+            <a class="ba bw1 pv1 ph2 f5 lh-solid no-underline tracked ttu animated b--black bg-white hover-bg-black black hover-white mr2 mr3-ns" href="https://github.com/chrisregner/github-compare" target="_blank">Source</a>
+            <a class="ba bw1 pv1 ph2 f5 lh-solid no-underline tracked ttu animated b--purple bg-purple hover-bg-white white hover-purple" href="https://chrisregner.github.io/github-compare" target="_blank">Live Site</a>
+          </div>
+        </div>
+      </li>
+
       <li class="mb5 pb3">
         <div class="ba b--light-gray mb4">
           <img class="db" src="img/minimal-react-wordpress.png" alt="">
