--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </p>
 
     <p class="tj">
-      He is looking for positions focused on <strong>React.js</strong> and <strong>JavaScript</strong> <span class="f6 mid-gray ttl">(permanent or contractual, office-based (Metro Manila) or remote)</span>. He is currently more adept at front-end development, but he is also open to revisiting is back-end skills.
+      He is looking for positions focused on <strong>React.js</strong> and <strong>JavaScript</strong> <span class="f6 mid-gray ttl">(permanent or contractual, office-based in Metro Manila or remote)</span>. He is currently more adept at front-end development, but he is also open to revisiting his back-end skills.
     </p>
   </article>
 
