--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
     </div>
 
     <p class="mb4 tj">
-      <strong>Christopher Regner</strong> is a self-taught front-end developer whose current expertise is React.js, Redux, and JavaScript. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray ttl">(Node.js, Meteor.js, Angular.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray ttl">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire/improve more skills such as node.js, machine learning, and cryptocurrency.
+      <strong>Christopher Regner</strong> is a self-taught front-end developer currently working at <a href="http://heyyou.com.au/" target="_blank" class="hover-black light-purple no-underline">Hey You</a> <span class="f6 mid-gray ttl">(React.js, Redux, and JavaScript)</span>. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray ttl">(Node.js, Meteor.js, Angular.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray ttl">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire/improve more skills such as node.js, machine learning, and cryptocurrency.
     </p>
 
     <p class="tj">
-      He is looking for positions focused on <strong>React.js</strong> and <strong>JavaScript</strong> <span class="f6 mid-gray ttl">(permanent or contractual, office-based in Metro Manila or remote)</span>. He is currently more adept at front-end development, but he is also open to revisiting his back-end skills.
+      He is looking for <strong>part-time</strong> projects preferrably focusing on <strong>React.js</strong> and/or <strong>JavaScript</strong> <span class="f6 mid-gray ttl">(contractual, home-based)</span>. His current expertise is front-end, but he's also confident that he can handle entry to mid-level back-end tasks.
     </p>
   </article>
 
